--- a/notebooks/qvariance_single.ipynb
+++ b/notebooks/qvariance_single.ipynb
@@ -253,8 +253,8 @@
     "plt.tight_layout()\n",
     "\n",
     "# Save for publication\n",
-    "plt.savefig(\"Q_Variance_Parabola.png\", dpi=300, bbox_inches='tight')\n",
-    "plt.savefig(\"Q_Variance_Parabola.pdf\", bbox_inches='tight')\n",
+    "# plt.savefig(\"Q_Variance_Parabola.png\", dpi=300, bbox_inches='tight')\n",
+    "# plt.savefig(\"Q_Variance_Parabola.pdf\", bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -264,7 +264,7 @@
    "source": [
     "## The Results\n",
     "\n",
-    "Plot shows variance as a function of z (black) and the fitted q-variance curve (red) for this stock. To reduce noise and obtain a better fit, use a long time series or combine different stocks."
+    "Plot shows variance as a function of z (black) and the fitted q-variance curve (red) for this asset. To reduce noise and obtain a better fit, use a long time series or combine different stocks."
    ]
   }
  ],
