--- a/notebooks/qvariance_single.ipynb
+++ b/notebooks/qvariance_single.ipynb
@@ -11,7 +11,9 @@
     "\n",
     "> **σ² = σ₀² + (z − zoff)² / 2**\n",
     "\n",
-    "Works whether `Date` is a column or the index — just drop in the path to your CSV file. Note that this code is for a single asset only, best results are obtained by averaging over a number of assets."
+    "Works whether `Date` is a column or the index — just drop in the path to your CSV file. Note that this code is for a single asset only, best results are obtained by averaging over a number of assets.",
+    "Here we have used the example of the S&P 500 index, though note this represents an average over stock prices rather than a stock price.",
+
    ]
   },
   {
