--- a/notebooks/qvariance_single.ipynb
+++ b/notebooks/qvariance_single.ipynb
@@ -11,9 +11,7 @@
     "\n",
     "> **σ² = σ₀² + (z − zoff)² / 2**\n",
     "\n",
-    "Works whether `Date` is a column or the index — just drop in the path to your CSV file. 
-Note that this code is for a single asset only, best results are obtained by averaging over a number of assets. 
-Also, here we have used the example of the S&P 500 index, which represents an average over stock prices rather than a stock price."
+    "Works whether `Date` is a column or the index — just drop in the path to your CSV file. Note that this code is for a single asset only, best results are obtained by averaging over a number of assets. Also, here we have used the example of the S&P 500 index, which represents an average over stock prices rather than a stock price."
 
    ]
   },
